set specific parent settings v2